# egp-ims

./: .gitignore  CLAUDE.md  MEMORY.md  build-deploy.sh  docker-compose.yml  init_saas_db.py  pyproject.toml
app/: database.py  import_vouchers.py  main.py  middleware.py  permissions.py  seed.py
app/routers/: accounts.py  admin.py  audit.py  auth.py  board.py  cockpit.py  departments.py  hr.py  investments.py  payables.py  permissions.py  subscriptions.py  taxes.py  templates.py  vouchers.py
app/schemas/: expenses.py  taxes.py
backend/: Dockerfile  cashflow_setup.py  e2e_test.py  fix_duplicate_voucher_nos.py  gen_reports.py  import_legacy_data.py  import_real_vouchers.py  import_server.py  init_opening_balances.py  init_saas_db.py  investment_e2e_test.py  rebuild_vouchers.py  render.yaml  requirements.txt  seed_internal_users.py
backend/app/: auth.py  database.py  import_data.py  import_vouchers.py  main.py  middleware.py  models.py  permissions.py  seed.py
backend/tests/: test_taxes.py
basic_master_data/: 2020.8-2026.4-科目发生额及余额表.xlsx  2026.01.01-2026.4.30-科目发生额及余额表.xlsx  仓库.xlsx  凭证类别.xlsx  员工.xlsx  地区.xlsx  存货.xlsx  存货分类.xlsx  常用摘要.xlsx  常用摘要分类.xlsx  往来单位.xlsx  往来单位分类.xlsx  往来期初明细.xlsx  收入.xlsx  现金流量期初.xlsx  现金流量项目.xlsx  现金流量项目分类.xlsx  科目.xlsx  科目期初余额.xlsx  结算方式.xlsx  计量单位.xlsx  账号.xlsx  费用.xlsx  辅助核算期初.xlsx  项目.xlsx  项目分类.xlsx
deploy/: intranet-nginx.conf  saas-nginx.conf
frontend/: .gitignore  Dockerfile  deploy.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/dist-check/: index.html
(+742 files in other folders)
