[project]
name = "omc-finance"
version = "0.1.0"
description = "Universal Standard Accounting System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "email-validator>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
